# detector-duplicados

./: .gitignore  BENCHMARK_FASE_2_0.md  CHANGELOG.md  DetectorDeDuplicados.spec  INFORME.md  INFORME_AUDITORIA_PROGRESO_2026-06-30.md  INFORME_FASE_2_0.md  README.md  RELEASE_CHECKLIST_REPORT.md  ROADMAP.md  bench_fase_2_0.py  pyproject.toml
.github/workflows/: build.yml  release.yml
Detector de duplicados_/: FASE1_CERTIFICATION_REPORT.md  FASE2.5_AUDIT_REPORT.md  FASE2_CERTIFICATION_REPORT.md  README.md  ROADMAP.md  TESTING_FINAL.md  TESTING_REPORT.md
Detector de duplicados_/.github/workflows/: build.yml
Detector de duplicados_/src/detector_duplicados/: config.py  db.py  exporter.py  html_report.py  main.py  scanner.py  watchdog.py
Detector de duplicados_/tests/: test_ambiente_real.py  test_cobertura_fase6.py  test_db.py  test_fase4_cleaner_mejoras.py  test_fase4_full.py  test_fase4_html_report.py  test_fase4_watchdog.py  test_fase5_main_coverage.py  test_scanner.py
src/detector_duplicados/: __init__.py  cleaner.py  cli.py  config.py  db.py  duper.py  html_report.py  main.py  policies.py  scanner.py  theme.py  ui.py  watchdog.py
tests/: test_ambiente_real.py  test_cleaner_and_report.py  test_cobertura_fase6.py  test_colisiones_fase3.py  test_duper.py  test_fase4_cleaner.py  test_fase5_cli_html_tests.py  test_fase5_coverage.py  test_fase5_main_coverage.py  test_html_report.py  test_menu_eof.py  test_multi_ruta.py  test_policies_and_export.py  test_progress_barriers.py  test_scanner_hash.py  test_ui_dos_formats.py
